background fix, mobile font fix, menu alignment fix

--- a/public/styles/m_site.css
+++ b/public/styles/m_site.css
@@ -87,7 +87,6 @@ hr {
 .rt-mobile-gallery {
   width: 100vw;
   height: 100vh;
-  background-color: yellow;
   position: relative;
   overflow: none;
 }
