--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -4928,14 +4928,14 @@ body {
 .rt-big-title {
   color: red;
   font-size: 4.8em;
-  font-family: "proxima_nova_semibold";
+  font-family: "proxima_nova_semibold", Helvetica, Arial, sans-serif;
   line-height: 1em;
   margin-right: 15px; }
 
 .rt-sub-title {
   color: red;
   font-size: 1.4em;
-  font-family: "proxima_nova_light";
+  font-family: "proxima_nova_light", Helvetica, Arial, sans-serif;
   margin-left: 8px; }
 
 .rt-content {
@@ -4952,7 +4952,7 @@ body {
   padding-right: 15px; }
 
 .rt-content-overlay-back {
-  font-family: "proxima_nova_semibold";
+  font-family: "proxima_nova_semibold", Helvetica, Arial, sans-serif;
   width: 100%;
   line-height: 24px;
   color: red;
@@ -5037,7 +5037,7 @@ body {
   right: 12px;
   bottom: 24px;
   color: #333333;
-  font-family: "proxima_nova_regular"; }
+  font-family: "proxima_nova_regular", Helvetica, Arial, sans-serif; }
 
 .rt-subscribe {
   border: 0px;
@@ -5099,7 +5099,7 @@ body {
 
 .rt-pdf-special {
   margin-left: 8px;
-  font-family: "proxima_nova_light";
+  font-family: "proxima_nova_light", Helvetica, Arial, sans-serif;
   font-size: 1.4em; }
 
 .rt-pdf-special a {
@@ -5131,29 +5131,29 @@ body {
 .rt-menu-title {
   color: red;
   font-size: 2em;
-  font-family: "proxima_nova_semibold"; }
+  font-family: "proxima_nova_semibold", Helvetica, Arial, sans-serif; }
 
 .rt-menu-sub-title {
   color: red;
   font-size: 1.8em;
-  font-family: "proxima_nova_semibold";
+  font-family: "proxima_nova_semibold", Helvetica, Arial, sans-serif;
   margin-top: 18px; }
 
 .rt-menu-item {
   margin-bottom: 12px; }
 
 .rt-menu-item-title {
-  font-family: "proxima_nova_semibold"; }
+  font-family: "proxima_nova_semibold", Helvetica, Arial, sans-serif; }
 
 .rt-menu-item-description {
-  font-family: "proxima_nova_light"; }
+  font-family: "proxima_nova_light", Helvetica, Arial, sans-serif; }
 
 .rt-menu-item-cost {
   margin-left: 12px; }
 
 /* Info */
 .rt-info-line {
-  font-family: "proxima_nova_semibold"; }
+  font-family: "proxima_nova_semibold", Helvetica, Arial, sans-serif; }
 
 .rt-info-lines {
   margin-bottom: 12px; }
@@ -5165,7 +5165,7 @@ body {
 /* Reservation */
 .rt-reservations input {
   border: 0px solid red;
-  font-family: "proxima_nova_light";
+  font-family: "proxima_nova_light", Helvetica, Arial, sans-serif;
   padding-left: 12px;
   height: 46px;
   font-size: 36px;
@@ -5177,7 +5177,7 @@ body {
   outline: none; }
 
 .rt-reservation-arrows {
-  font-family: "proxima_nova_semibold";
+  font-family: "proxima_nova_semibold", Helvetica, Arial, sans-serif;
   font-size: 1.8em;
   color: red;
   margin-left: 4px; }
@@ -5189,7 +5189,7 @@ body {
   margin-right: -12px; }
 
 .rt-reservation-inquiries-heading {
-  font-family: "proxima_nova_semibold";
+  font-family: "proxima_nova_semibold", Helvetica, Arial, sans-serif;
   font-size: 1.8em;
   color: red; }
 
@@ -5214,7 +5214,7 @@ body {
   color: red; }
 
 .rt-team h1 {
-  font-family: "proxima_nova_semibold"; }
+  font-family: "proxima_nova_semibold", Helvetica, Arial, sans-serif; }
 
 .rt-team-cell {
   display: inline-block;
